# GPU-Computing

./: README.md
Kmeans/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  visualize_kmeans.py
Kmeans/Algorithm/: CMakeLists.txt  Makefile  cmake_install.cmake  kmeans  kmeans.cl  kmeans.cpp  sum_reduction.cl  temporary_counts.cl  utils.cpp  utils.h  utils.hpp
Kmeans/DeviceInfo/: DeviceInfo  DeviceInfo.cpp  Makefile  cmake_install.cmake
Lab1-Sources/: CMakeCache.txt  Makefile  cmake_install.cmake
Lab1-Sources/Exercise01/: CMakeCache.txt  DeviceInfo.cpp  Makefile  cmake_install.cmake
Lab1-Sources/Exercise02/: CMakeCache.txt  Makefile  cmake_install.cmake  vadd.cl  vadd.cpp  vadd02
Lab1-Sources/Exercise03/: Makefile  cmake_install.cmake  vadd.cpp  vadd03
Lab1-Sources/Exercise04/: Makefile  cmake_install.cmake  matmul  matmul.cl  matmul.cpp
Lab1-Sources/Exercise05/: Makefile  cmake_install.cmake  pi.cl  pi.cpp
Reduction/: reduction_minloc.cl  reduction_minloc.cxx  reduction_sum.cl  reduction_sum.cxx  sum_reduction.cl
